<resources>
    <string name="app_name">Enroll</string>
    <!-- Strings related to login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="logo">App Logo</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <string name="iAmText">I am</string>
    <string name="student">Student</string>
    <string name="instructor">Instructor</string>
    <string name="hello_admin">Hello Admin!</string>
    <string name="delete_account">Delete Account</string>
    <string name="create_course">Create Course</string>
    <string name="edit_course">Edit Course</string>
    <string name="delete_course">Delete Course</string>
    <string name="course_name">Course Name</string>
    <string name="course_id">Course ID</string>
    <string name="original_course_id">Original Course ID</string>
    <string name="original_course_name">Original Course Name</string>
    <string name="new_course_id">New Course ID</string>
    <string name="new_course_name">New Course Name</string>
</resources>